--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.2",
+    "@mui/material-nextjs": "^6.0.2",
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
