--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@mui/material": "^6.0.2",
     "@mui/material-nextjs": "^6.0.2",
     "bootstrap": "^5.3.3",
+    "i18next": "^23.15.0",
     "next": "14.0.4",
+    "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
