--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "^23.15.0",
     "next": "14.0.4",
     "next-i18next": "^15.3.1",
+    "next-intl": "^3.19.1",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.1",
