--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
